# Labels

./: .gitignore  CMakeLists.txt  main.cpp
imp/: CMakeLists.txt
imp/inc/: Decorators.hpp  Labels.hpp  Transformations.hpp
imp/inc/Decorators/: BaseDecorator.hpp  ConcreteDecorators.hpp
imp/inc/Labels/: BaseLabel.hpp  HelpLabels.hpp  LazyLabel.hpp  PromptLabels.hpp  SimpleLabels.hpp
imp/inc/Transformations/: BaseTransformation.hpp  CensorTransformation.hpp  CensorTransformationFactory.hpp  CompositeTransformation.hpp  ReplaceTransformation.hpp  SimpleTransformations.hpp
imp/lib/Decorators/: BaseDecorator.cpp  ConcreteDecorators.cpp
imp/lib/Labels/: BaseLabel.cpp  HelpLabels.cpp  LazyLabel.cpp  SimpleLabels.cpp
imp/lib/Transformations/: BaseTransformation.cpp  CensorTransformation.cpp  CensorTransformationFactory.cpp  CompositeTransformation.cpp  ReplaceTransformation.cpp  SimpleTransformations.cpp
tst/: CMakeLists.txt
tst/Decorators/: TestBaseDecorator.cpp  TestConcreteDecorators.cpp
tst/Labels/: TestBaseLabel.cpp  TestHelpLabels.cpp  TestLazyLabel.cpp  TestSimpleLabels.cpp
tst/Transformations/: TestBaseTransformation.cpp  TestCensorTransformation.cpp  TestCensorTransformationFactory.cpp  TestCompositeTransformation.cpp  TestReplaceTransformation.cpp  TestSimpleTransformations.cpp
